--- a/index.html
+++ b/index.html
@@ -200,6 +200,25 @@
         </div>
         <div class="container-publications grid-publications">
 
+          <div class="pub-item-container">
+            <!-- <div class="pub-item-container"> -->
+             <div class="outer-circle">
+             </div>
+               <div class="inner-circle inner-circle-19">
+               </div>
+              <div class="pub-item-text-box">
+                 <div class="pub-item-genre-box padding-debug">
+                   <a class="pub-item-title-link text-debug-2 text-debug-5" href="https://www.vuurland.nu/wie-zijn-wij/isa
+                   " target="_blank">Negen wandel-zkv's</span></a>
+                   <div class="genre-tags">
+                     <span class="tag tag--proza margin-top">Proza</span>
+                   </div>
+                   <p class="pub-item-text pub-item-text-archipel text-debug-groter margin-top">Vuurland <br> 2024</p>
+                     <div class="pub-item-text-box-inner">
+                   </div>
+                 </div>
+               </div>
+              </div>
 
               <div class="pub-item-container">
               <!-- <div class="pub-item-container"> -->
@@ -613,7 +632,7 @@
                 </div>
                </div>
 
-                 <div class="pub-item-container pub-con-center">
+                 <div class="pub-item-container">
                  <!-- <div class="pub-item-container"> -->
                   <div class="outer-circle">
                   </div>
@@ -631,6 +650,9 @@
                       </div>
                     </div>
                    </div>
+
+                   <!-- VOOR DE LAATSTE BIJ ONEVEN: -->
+                    <!-- <div class="pub-item-container pub-con-center"> -->
 
               
         </div>
@@ -788,13 +810,13 @@
         </div>
       </section>
 
-      <!-- <section class="section-redactie">
+      <!-- <section class="section-redactie-2">
         <div class="form-container">
 
             
           <form class="form" name="contact" method="POST" data-netlify="true">
             <div class="form-icon-container">
-              <img src="/imgs/contact.svg.svg" class="form-icon">
+              <img src="/imgs/collage/img3.png" class="form-icon">
             </div>
 
             <div class="form--1-2">
@@ -822,7 +844,7 @@
           </div>
 
           <div class="text-area">
-            <label for="textarea">Typ hier uw bericht:</label>
+            <label for="textarea">Wat kan ik voor je betekenen?</label>
             <textarea class="form-input" id="textarea" name="message" rows="8" cols="80"></textarea>
           </div>
 
